# autointerp

./: .gitignore  .gitmodules  README.md  STREAMLIT_README.md  ae.py  agent.py  antonym_spanish.json  app.py  autoencoder.py  caching.ipynb  caching.py  collab.ipynb  config.py  config.yaml  database.py  debate.pkl  demo.py  dolls.py  env.py  explainer.py  gemma_sae_download.py  gpt2.ipynb  inspect.py  judged.ipynb  neuronpedia.py  prompt.txt  prompt_builder.py  prompts.py  pyproject.toml  pythia.ipynb  requirements-streamlit.txt  requirements.txt  run.py  run_dashboard.py  scores.json  simulator.py  test.ipynb  test_dashboard.py  to_website.py  topk_sae_indices.json  (+3 more)
agent/: Agent.py  Environment.py  Evaluator.py  Explainer.py  SelfReflector.py  __init__.py  prompts.py  utils.py
attn_sae/: gpt2.ipynb  pythia.ipynb
autointerp/: __init__.py  base.py  caching.py  loader.py  samplers.py  utils.py
demo/: cache.py  explain.py  gemma.py  score.py  simulation.py  vis.py
demos/: cache.py  explain.py  query.py  simulate.py
docs/: 1_7703.html  3_11662.html  4_4365.html  gpt4_3_8437.html  index.html  llama8b_3_8437.html  updated_3_8437.html
experiments/: cache.py  cache_gemma.py  cache_gemma.sh  explain.py  explain_gemma.py  explain_gemma.sh  explore.py  load.py  run_gemma.sh  score copy.py  score.py  seed.py  simulate.py  simulate_gemma.sh  test.py
neurondb/: __init__.py  base.py  caching.py  config.py  config.yaml  database.py  demo.py  doll_caching.py  loader.py  neuronpedia.py  schema.py  utils.py  vis.py
outputs/: explanations.json
single/: __init__.py  condenser.py  config.py  conversation.txt  demo.ipynb  detection_scorer.py  environment.py  expanded.ipynb  explainer.py  generation_scorer.py  llama_config.py  oai_conversation.txt  output.txt  prompts.py  run.py  test.ipynb  top_examples.txt  utils.py
working/: __init__.py  config.py  config.yaml  debate.py  debater.py  history.py  judge.py  prompt.py  (+2 more)
(+452 files in other folders)
