[project]
name = "neurondb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.45.2",
    "datasets>=2.14.4",
    "ipykernel>=6.29.5",
    "nnsight>=0.4.0",
    "openai>=1.61.1",
    "torchtyping>=0.1.5",
    "triton>=3.1.0",
    # "unsloth>=2025.2.5",
]

# uv pip install -e .
[tool.setuptools]
packages = ["neurondb"]
