[project]
name = "autointerp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.45.2",
    "baukit",
    "datasets>=2.14.4",
    "httpx>=0.27.2",
    "ipykernel>=6.29.5",
    "safetensors>=0.4.5",
    "sentence-transformers>=3.4.1",
    "setuptools>=75.8.0",
    "torchtyping>=0.1.5",
    "triton>=3.1.0",
]

# uv pip install -e .
[tool.setuptools]
packages = ["autointerp"]

[tool.uv.sources]
baukit = { git = "https://github.com/davidbau/baukit" }
